source/k8s-configurations/deployments.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata: 
  name: frontend
  namespace: default
  labels: 
    run: frontend
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      run: frontend
  template:
    metadata:
      labels:
        run: frontend
    spec:
      containers:
        - name: frontend
          image: gcr.io/capstone-project-team2/frontend:v1
          ports:
            - containerPort: 3000
              protocol: TCP

---

kind: Deployment
apiVersion: extensions/v1beta1
metadata: 
  name: member-backend
  namespace: default
  labels: 
    run: member-backend
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      run: member-backend
  template:
    metadata:
      labels:
        run: member-backend
    spec: 
      containers:
        - name: member-backend
          image: gcr.io/capstone-project-team2/member-backend:v1
          ports:
            - containerPort: 5000
              protocol: TCP
---

kind: Deployment
apiVersion: extensions/v1beta1
metadata: 
  name: itinerary-backend
  namespace: default
  labels: 
    run: itinerary-backend
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      run: itinerary-backend
  template:
    metadata:
      labels:
        run: itinerary-backend
    spec: 
      containers:
        - name: itinerary-backend
          image: gcr.io/capstone-project-team2/itinerary-backend:v1
          ports:
            - containerPort: 4000
              protocol: TCP
---

kind: Deployment
apiVersion: extensions/v1beta1
metadata: 
  name: member-database
  namespace: default
  labels: 
    run: member-database
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      run: member-database
  template: 
    metadata: 
      labels: 
        run: member-database
    spec: 
      containers: 
        - name: member-database
          image: gcr.io/capstone-project-team2/member-database:v1
          ports: 
            - containerPort: 5432
              protocol: TCP


---

kind: Deployment
apiVersion: extensions/v1beta1
metadata: 
  name: itinerary-database
  namespace: default
  labels: 
    run: itinerary-database
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      run: itinerary-database
  template: 
    metadata: 
      labels: 
        run: itinerary-database
    spec: 
      containers: 
        - name: itinerary-database
          image: gcr.io/capstone-project-team2/itinerary-database:v1
          ports: 
            - containerPort: 27017
              protocol: TCP
