source/k8s-configurations/services.yaml
kind: Service
apiVersion: v1
metadata: 
  name: frontend
  namespace: default
  labels: 
    run: frontend
spec: 
  ports: 
      - protocol: TCP
        port: 80
        targetPort: 3000 
  selector: 
    run: frontend
  type: ClusterIP


---


kind: Service
apiVersion: v1
metadata: 
  name: backend
  namespace: default
  labels: 
    run: backend
spec: 
  ports: 
      - protocol: TCP
        port: 8000
        targetPort: 8000
  selector: 
    run: backend
  type: ClusterIP


---


kind: Service
apiVersion: v1
metadata: 
  name: database
  namespace: default
  labels: 
    run: database
spec: 
  ports: 
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
  selector: 
    run: database
  # type: ClusterIP
