source/k8s-configurations/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: ingress
  namespace: default
spec:
  rules:
    - host: frontend.trippplanner.com
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 80
            path: /
    - host: member-api.trippplanner.com
      http:
        paths:
          - backend:
              serviceName: member-backend
              servicePort: 5000
            path: /
    - host: itinerary-api.trippplanner.com
      http:
        paths:
          - backend:
              serviceName: itinerary-backend
              servicePort: 4000
            path: /
    - host: member-database.trippplanner.com
      http:
        paths:
          - backend:
              serviceName: member-database
              servicePort: 5432
            path: /
    - host: itinerary-database.trippplanner.com
      http:
        paths:
          - backend:
              serviceName: itinerary-database
              servicePort: 27017
            path: / 
  tls:
    - hosts:
        - frontend.trippplanner.com
        - member-api.trippplanner.com
        - itinerary-api.trippplanner.com
        - member-database.trippplanner.com
        - itinerary-database.trippplanner.com
      secretName: ssl-certs
